--- a/Views/Admin/PODetails.cshtml
+++ b/Views/Admin/PODetails.cshtml
@@ -29,7 +29,193 @@
 
         @Html.AntiForgeryToken()
         <!-- Main row -->
+
         <div class="row">
+            <div class="col-lg-12">
+                <!-- Default box -->
+                <div class="box">
+                    <div class="box-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.PurOrdModels.CustomerId, new { @class = "form-control-label" }) <sup>*</sup>
+                                        @Html.TextAreaFor(m => m.PurOrdModels.CustomerId,
+                                new
+                                {
+                                    @class = "form-control text-capitalize cstid",
+                                    @readonly = true,
+                                    placeholder = @Html.DisplayNameFor(m => m.PurOrdModels.CustomerId)
+                                })
+                                        @Html.ValidationMessageFor(m => m.PurOrdModels.CustomerId, "",
+                                new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.PurOrdModels.CustomerBillAdd, new { @class = "form-control-label" }) <sup>*</sup>
+                                        @Html.TextAreaFor(m => m.PurOrdModels.CustomerBillAdd,
+                                new
+                                {
+                                    @class = "form-control text-capitalize cstbadd",
+                                    @readonly = true,
+                                    placeholder = @Html.DisplayNameFor(m => m.PurOrdModels.CustomerBillAdd)
+                                })
+                                        @Html.ValidationMessageFor(m => m.PurOrdModels.CustomerBillAdd, "",
+                                new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.PurOrdModels.CustomerShipAdd, new { @class = "form-control-label" }) <sup>*</sup>
+                                        @Html.TextAreaFor(m => m.PurOrdModels.CustomerShipAdd,
+                                new
+                                {
+                                    @class = "form-control text-capitalize cstsadd",
+                                    @readonly = true,
+                                    placeholder = @Html.DisplayNameFor(m => m.PurOrdModels.CustomerShipAdd)
+                                })
+                                        @Html.ValidationMessageFor(m => m.PurOrdModels.CustomerShipAdd, "",
+                                new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="col-md-12 row">
+                                    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.PurOrdModels.POType, new { @class = "form-control-label" })
+                                            @Html.DropDownListFor(m => m.PurOrdModels.POType,
+                                           new List<SelectListItem>
+                                              {
+                                                new SelectListItem{ Text="Regular", Value = "Regular", Selected = true  },
+                                                new SelectListItem{ Text="Open PO", Value = "Open PO" },
+                                                new SelectListItem{ Text="ARC", Value = "ARC" },
+                                              },
+                                            "--Select PO Type--", new { @class = "form-control select2 potype", @disabled = true })
+                                            @Html.ValidationMessageFor(m => m.PurOrdModels.POType, "",
+                                    new { @class = "text-danger errpotype" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.PurOrdModels.POId, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextBoxFor(m => m.PurOrdModels.POId,
+                                    new
+                                    {
+                                        @class = "form-control text-capitalize poid",
+                                        @readonly = true,
+                                        placeholder = @Html.DisplayNameFor(m => m.PurOrdModels.POId)
+                                    })
+                                            @Html.ValidationMessageFor(m => m.PurOrdModels.POId, "",
+                                    new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.PurOrdModels.PONumber, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextBoxFor(m => m.PurOrdModels.PONumber,
+                                    new
+                                    {
+                                        @readonly = true,
+                                        @class = "form-control text-capitalize pono",
+                                        placeholder = @Html.DisplayNameFor(m => m.PurOrdModels.PONumber)
+                                    })
+                                            @Html.ValidationMessageFor(m => m.PurOrdModels.PONumber, "",
+                                    new { @class = "text-danger errpono" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.PurOrdModels.LineItems, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextBoxFor(m => m.PurOrdModels.LineItems,
+                                    new
+                                    {
+                                        @class = "form-control polneitm",
+                                        @type = "number",
+                                        @readonly = true,
+                                        placeholder = @Html.DisplayNameFor(m => m.PurOrdModels.LineItems)
+                                    })
+                                            @Html.ValidationMessageFor(m => m.PurOrdModels.LineItems, "",
+                                    new { @class = "text-danger errpolneitm" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.PurOrdModels.OrderDate, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextBoxFor(m => m.PurOrdModels.OrderDate,
+                                    new
+                                    {
+                                        @class = "form-control poorddate datepicker",
+                                        @readonly = true,
+                                        placeholder = @Html.DisplayNameFor(m => m.PurOrdModels.OrderDate)
+                                    })
+                                            @Html.ValidationMessageFor(m => m.PurOrdModels.OrderDate, "",
+                                    new { @class = "text-danger errpoorddate" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.PurOrdModels.ExpDlvDate, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextBoxFor(m => m.PurOrdModels.ExpDlvDate,
+                                    new
+                                    {
+                                        @class = "form-control poedlvdate datepicker",
+                                        @readonly = true,
+                                        placeholder = @Html.DisplayNameFor(m => m.PurOrdModels.ExpDlvDate)
+                                    })
+                                            @Html.ValidationMessageFor(m => m.PurOrdModels.ExpDlvDate, "",
+                                    new { @class = "text-danger errpoedlvdate" })
+                                        </div>
+                                    </div>
+                                    @*<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.RequestInvoiceModels.Remarks, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextAreaFor(m => m.RequestInvoiceModels.Remarks,
+                                    new
+                                    {
+                                        @class = "form-control",
+                                        @readonly = true,
+                                        placeholder = @Html.DisplayNameFor(m => m.RequestInvoiceModels.Remarks)
+                                    })
+                                            @Html.ValidationMessageFor(m => m.RequestInvoiceModels.Remarks, "",
+                                    new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.RequestInvoiceModels.ContactNo, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextBoxFor(m => m.RequestInvoiceModels.ContactNo,
+                                    new
+                                    {
+                                        @class = "form-control",
+                                        @readonly = true,
+                                        placeholder = @Html.DisplayNameFor(m => m.RequestInvoiceModels.ContactNo)
+                                    })
+                                            @Html.ValidationMessageFor(m => m.RequestInvoiceModels.ContactNo, "",
+                                    new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                                        <div class="form-group">
+                                            @Html.LabelFor(m => m.RequestInvoiceModels.ContactPerson, new { @class = "form-control-label" }) <sup>*</sup>
+                                            @Html.TextBoxFor(m => m.RequestInvoiceModels.ContactPerson,
+                                    new
+                                    {
+                                        @class = "form-control",
+                                        @readonly = true,
+                                        placeholder = @Html.DisplayNameFor(m => m.RequestInvoiceModels.ContactPerson)
+                                    })
+                                            @Html.ValidationMessageFor(m => m.RequestInvoiceModels.ContactPerson, "",
+                                    new { @class = "text-danger" })
+                                        </div>
+                                    </div>*@
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+                <!-- /.box -->
+            </div>
             <div class="col-lg-12">
                 <!-- Default box -->
                 <div class="box">
