--- a/Views/Admin/POGenerate.cshtml
+++ b/Views/Admin/POGenerate.cshtml
@@ -494,7 +494,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button name="submit" id="pogen" class="btn bg-aqua m-t-20" title="Submit"
+                        <button name="submit" id="pogen" class="btn bg-aqua m-t-20 pogen" title="Submit"
                                 value="pogen">
                             Submit
                         </button>
