--- a/Views/Admin/PRApproval.cshtml
+++ b/Views/Admin/PRApproval.cshtml
@@ -37,7 +37,7 @@
                         <div class="col-md-12">
                             @if (Model.UserProfileModels.EmpType != "User")
                             {
-                                <a href="javascript:void(0)" class="btn bg-aqua" id="prapprove">Approve</a>
+                                <a href="javascript:void(0)" class="btn bg-aqua prapprove" id="prapprove">Approve</a>
                             }
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
