--- a/Views/Admin/PurchaseOrder.cshtml
+++ b/Views/Admin/PurchaseOrder.cshtml
@@ -451,7 +451,7 @@
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                            <button name="@actBtn.ToLower()" id="posubmit" class="btn bg-aqua" title="@actBtn"
+                            <button name="@actBtn.ToLower()" id="posubmit" class="btn bg-aqua posubmit" title="@actBtn"
                                     value="@actBtn">
                                 @actBtn.ToUpper()
                             </button>
