--- a/Views/Admin/RegisteredVendor.cshtml
+++ b/Views/Admin/RegisteredVendor.cshtml
@@ -109,39 +109,41 @@
                                         <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().City)</th>
                                         <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().State)</th>
                                         <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Country)</th>
+                                        <th>Added By</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var u in Model.VendorInfoModelList)
                                     {
-                                        <tr>
-                                            <td></td>
-                                            <td>
-                                                @Html.EncodedActionLink("<i class='fa fa-pencil-square-o'></i>", "EditVendorInfo", "Admin",
-                                               new { id = u.Id }, new { @class = "btn btn-edt btn-sm bg-aqua", title = "Edit" })
-                                                @Html.EncodedActionLink("<i class='fa fa-user'></i>", "VendorProfile", "Admin",
-                                          new { id = u.Id }, new { @class = "btn btn-edt  btn-sm bg-aqua", title = "Profile" })
-                                                @if (Model.UserProfileModels.EmpType != "User")
-                                                {
-                                                    @Html.EncodedActionLink("<i class='fa fa-check'></i>", "ApproveVendor", "Admin",
-                                                           new { id = u.Id }, new { @class = "btn btn-edt bg-green  btn-sm mb-act-confirm", title = "Approve", @data_box = "#mb-act-cnfrm" })
-                                                    @Html.EncodedActionLink("<i class='fa fa-check'></i>", "DeleteVendor", "Admin",
-                                                           new { id = u.Id }, new { @class = "btn btn-edt bg-red  btn-sm mb-act-confirm-del", title = "Delete", @data_box = "#mb-act-cnfrm-del" })
-                                                }
-                                            </td>
-                                            <td>@Html.DisplayFor(model => u.VendorCode)</td>
-                                            <td width="20">@Html.DisplayFor(model => u.CompanyName)</td>
-                                            <td>@Html.DisplayFor(model => u.ContactPerson)</td>
-                                            <td>@Html.DisplayFor(model => u.Contact1)</td>
-                                            <td>@Html.DisplayFor(model => u.Contact2)</td>
-                                            <td>@Html.DisplayFor(model => u.Email)</td>
-                                            <td>@Html.DisplayFor(model => u.WebsiteURL)</td>
-                                            <td>@Html.DisplayFor(model => u.Category)</td>
-                                            <td>@Html.DisplayFor(model => u.Brand)</td>
-                                            <td>@Html.DisplayFor(model => u.City)</td>
-                                            <td>@Html.DisplayFor(model => u.State)</td>
-                                            <td>@Html.DisplayFor(model => u.Country)</td>
-                                        </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td>
+                                            @Html.EncodedActionLink("<i class='fa fa-pencil-square-o'></i>", "EditVendorInfo", "Admin",
+                                           new { id = u.Id }, new { @class = "btn btn-edt btn-sm bg-aqua", title = "Edit" })
+                                            @Html.EncodedActionLink("<i class='fa fa-user'></i>", "VendorProfile", "Admin",
+                                      new { id = u.Id }, new { @class = "btn btn-edt  btn-sm bg-aqua", title = "Profile" })
+                                            @if (Model.UserProfileModels.EmpType != "User")
+                                            {
+                                                @Html.EncodedActionLink("<i class='fa fa-check'></i>", "ApproveVendor", "Admin",
+                                                       new { id = u.Id }, new { @class = "btn btn-edt bg-green  btn-sm mb-act-confirm", title = "Approve", @data_box = "#mb-act-cnfrm" })
+                                                @Html.EncodedActionLink("<i class='fa fa-trash'></i>", "DeleteVendor", "Admin",
+                                                       new { id = u.Id }, new { @class = "btn btn-edt bg-red  btn-sm mb-act-confirm-del", title = "Delete", @data_box = "#mb-act-cnfrm-del" })
+                                            }
+                                        </td>
+                                        <td>@Html.DisplayFor(model => u.VendorCode)</td>
+                                        <td width="20">@Html.DisplayFor(model => u.CompanyName)</td>
+                                        <td>@Html.DisplayFor(model => u.ContactPerson)</td>
+                                        <td>@Html.DisplayFor(model => u.Contact1)</td>
+                                        <td>@Html.DisplayFor(model => u.Contact2)</td>
+                                        <td>@Html.DisplayFor(model => u.Email)</td>
+                                        <td>@Html.DisplayFor(model => u.WebsiteURL)</td>
+                                        <td>@Html.DisplayFor(model => u.Category)</td>
+                                        <td>@Html.DisplayFor(model => u.Brand)</td>
+                                        <td>@Html.DisplayFor(model => u.City)</td>
+                                        <td>@Html.DisplayFor(model => u.State)</td>
+                                        <td>@Html.DisplayFor(model => u.Country)</td>
+                                        <td>@Html.DisplayFor(model => u.SysCreator)</td>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
