--- a/Views/Admin/ApprovedVendor.cshtml
+++ b/Views/Admin/ApprovedVendor.cshtml
@@ -1,159 +1,161 @@
 ﻿@using Vendor_Indusuno.Extensions
 @model Vendor_Indusuno.ViewModels.VendorInfoViewModel
 @{
-	ViewBag.Title = "Approved Vendor";
-	TempData["Vendor"] = "active";
-	TempData["ApprovedVendor"] = "active";
-	Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    ViewBag.Title = "Approved Vendor";
+    TempData["Vendor"] = "active";
+    TempData["ApprovedVendor"] = "active";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <!-- Content Header (Page header) -->
 <section class="content-header">
-	@{
-		string actType = "Add";
-		string actBtn = "Submit";
-		string pageTitle = Html.Raw(Html.PageGTitle()) + "";
-		if (!String.IsNullOrEmpty(Model.VendorInfoModels.Id))
-		{
-			actType = "Edit";
-			actBtn = "Update";
-		}
-	}
-	<h1>
-		@pageTitle
-		<small></small>
-	</h1>
-	<ol class="breadcrumb">
-		<li><a href="@Url.Action("Index")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-		@Html.Raw(Html.BuildBreadcrumbNavigation())
-	</ol>
+    @{
+        string actType = "Add";
+        string actBtn = "Submit";
+        string pageTitle = Html.Raw(Html.PageGTitle()) + "";
+        if (!String.IsNullOrEmpty(Model.VendorInfoModels.Id))
+        {
+            actType = "Edit";
+            actBtn = "Update";
+        }
+    }
+    <h1>
+        @pageTitle
+        <small></small>
+    </h1>
+    <ol class="breadcrumb">
+        <li><a href="@Url.Action("Index")"><i class="fa fa-dashboard"></i> Dashboard</a></li>
+        @Html.Raw(Html.BuildBreadcrumbNavigation())
+    </ol>
 </section>
 <!-- Main content -->
 <section class="content">
-	@using (Html.BeginForm("ApprovedVendor", "Admin", FormMethod.Post, new { id = "form_advanced_validation", autocomplete = "off", enctype = "multipart/form-data" }))
-	{
-		@Html.AntiForgeryToken()
-		<!-- Main row -->
-		<div class="row">
-			<div class="col-lg-12">
-				<!-- Default box -->
-				<div class="box">
-					@if (Model.VendorInfoModelList.Count > 0)
-					{
-						<div class="box-header with-border">
-							<h3 class="box-title">@pageTitle List</h3>
-							<div class="box-tools pull-right">
-								<button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-										title="Collapse">
-									<i class="fa fa-minus"></i>
-								</button>
-								@*<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-						<i class="fa fa-times"></i>
-					</button>*@
-							</div>
-						</div>
-						<div class="box-body">
-							<table id="tblApVendor" class="table table-bordered display">
-								<thead>
-									<tr>
-										<th>SNo.</th>
-										<th>Action</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().VendorCode)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().CompanyName)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().ContactPerson)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Contact1)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Contact2)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Email)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().WebsiteURL)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Category)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Brand)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().City)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().State)</th>
-										<th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Country)</th>
-									</tr>
-								</thead>
-								<tbody>
-									@foreach (var u in Model.VendorInfoModelList)
-									{
-									<tr>
-										<td></td>
-                                        <td>
-                                            @Html.EncodedActionLink("<i class='fa fa-pencil-square-o'></i>", "EditVendorInfo", "Admin",
-                                          new { id = u.Id }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Edit" })
-                                            @Html.EncodedActionLink("<i class='fa fa-user'></i>", "VendorProfile", "Admin",
-                                          new { id = u.Id }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Profile" })
-                                        </td>
-										<td>@Html.DisplayFor(model => u.VendorCode)</td>
-										<td>@Html.DisplayFor(model => u.CompanyName)</td>
-										<td>@Html.DisplayFor(model => u.ContactPerson)</td>
-										<td>@Html.DisplayFor(model => u.Contact1)</td>
-										<td>@Html.DisplayFor(model => u.Contact2)</td>
-										<td>@Html.DisplayFor(model => u.Email)</td>
-										<td>@Html.DisplayFor(model => u.WebsiteURL)</td>
-										<td>@Html.DisplayFor(model => u.Category)</td>
-										<td>@Html.DisplayFor(model => u.Brand)</td>
-										<td>@Html.DisplayFor(model => u.City)</td>
-										<td>@Html.DisplayFor(model => u.State)</td>
-										<td>@Html.DisplayFor(model => u.Country)</td>
-									</tr>
-									}
-								</tbody>
-							</table>
-						</div>
-						<!-- /.box-body -->
-					}
-					else
-					{
-						<div class="box-body">
-							<div class="no-record">No record found.</div>
-						</div>
-					}
-				</div>
-				<!-- /.box -->
-			</div>
-		</div>
-		<!-- danger with sound -->
-		<div class="message-box animated fadeIn" data-sound="alert" id="mb-act-cnfrm">
-			<div class="mb-container">
-				<div class="mb-middle">
-					<div class="mb-title"><span class="fa fa-warning"></span> Confirm <strong>Box</strong> ?</div>
-					<div class="mb-content">
-						<p>Are you sure you want to delete?</p>
-						<p>Press No if you want to Cancel. Press Yes to Delete the record.</p>
-					</div>
-					<div class="mb-footer">
-						<div class="pull-right">
-							<a id="confirmhref" href="#" class="btn btn-confirm-yes btn-lg">Yes</a>
-							<button class="btn btn-confirm-no btn-lg mb-control-close">No</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- end danger with sound -->
-		<!-- /.row (main row) -->
-		<!-- Modal -->
-		@*<div class="modal fade" id="modalAddBranch" style="display: none;">
-				<div class="modal-dialog modal-lg">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">×</span>
-							</button>
-							<h4 class="modal-title">Default Modal</h4>
-						</div>
-						<div class="modal-body">
-							<p>One fine body…</p>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
-							<button type="button" class="btn btn-primary">Save changes</button>
-						</div>
-					</div>
-					<!-- /.modal-content -->
-				</div>
-				<!-- /.modal-dialog -->
-			</div>*@
-	}
+    @using (Html.BeginForm("ApprovedVendor", "Admin", FormMethod.Post, new { id = "form_advanced_validation", autocomplete = "off", enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+        <!-- Main row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <!-- Default box -->
+                <div class="box">
+                    @if (Model.VendorInfoModelList.Count > 0)
+                    {
+                        <div class="box-header with-border">
+                            <h3 class="box-title">@pageTitle List</h3>
+                            <div class="box-tools pull-right">
+                                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
+                                        title="Collapse">
+                                    <i class="fa fa-minus"></i>
+                                </button>
+                                @*<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                                        <i class="fa fa-times"></i>
+                                    </button>*@
+                            </div>
+                        </div>
+                        <div class="box-body">
+                            <table id="tblApVendor" class="table table-bordered display">
+                                <thead>
+                                    <tr>
+                                        <th>SNo.</th>
+                                        <th>Action</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().VendorCode)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().CompanyName)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().ContactPerson)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Contact1)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Contact2)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Email)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().WebsiteURL)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Category)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Brand)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().City)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().State)</th>
+                                        <th>@Html.DisplayNameFor(model => model.VendorInfoModelList.FirstOrDefault().Country)</th>
+                                        <th>Added By</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var u in Model.VendorInfoModelList)
+                                    {
+                                        <tr>
+                                            <td></td>
+                                            <td>
+                                                @Html.EncodedActionLink("<i class='fa fa-pencil-square-o'></i>", "EditVendorInfo", "Admin",
+                                              new { id = u.Id }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Edit" })
+                                                @Html.EncodedActionLink("<i class='fa fa-user'></i>", "VendorProfile", "Admin",
+                                              new { id = u.Id }, new { @class = "btn btn-edt bg-aqua btn-sm", title = "Profile" })
+                                            </td>
+                                            <td>@Html.DisplayFor(model => u.VendorCode)</td>
+                                            <td>@Html.DisplayFor(model => u.CompanyName)</td>
+                                            <td>@Html.DisplayFor(model => u.ContactPerson)</td>
+                                            <td>@Html.DisplayFor(model => u.Contact1)</td>
+                                            <td>@Html.DisplayFor(model => u.Contact2)</td>
+                                            <td>@Html.DisplayFor(model => u.Email)</td>
+                                            <td>@Html.DisplayFor(model => u.WebsiteURL)</td>
+                                            <td>@Html.DisplayFor(model => u.Category)</td>
+                                            <td>@Html.DisplayFor(model => u.Brand)</td>
+                                            <td>@Html.DisplayFor(model => u.City)</td>
+                                            <td>@Html.DisplayFor(model => u.State)</td>
+                                            <td>@Html.DisplayFor(model => u.Country)</td>
+                                            <td>@Html.DisplayFor(model => u.SysCreator)</td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- /.box-body -->
+                    }
+                    else
+                    {
+                        <div class="box-body">
+                            <div class="no-record">No record found.</div>
+                        </div>
+                    }
+                </div>
+                <!-- /.box -->
+            </div>
+        </div>
+        <!-- danger with sound -->
+        <div class="message-box animated fadeIn" data-sound="alert" id="mb-act-cnfrm">
+            <div class="mb-container">
+                <div class="mb-middle">
+                    <div class="mb-title"><span class="fa fa-warning"></span> Confirm <strong>Box</strong> ?</div>
+                    <div class="mb-content">
+                        <p>Are you sure you want to delete?</p>
+                        <p>Press No if you want to Cancel. Press Yes to Delete the record.</p>
+                    </div>
+                    <div class="mb-footer">
+                        <div class="pull-right">
+                            <a id="confirmhref" href="#" class="btn btn-confirm-yes btn-lg">Yes</a>
+                            <button class="btn btn-confirm-no btn-lg mb-control-close">No</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end danger with sound -->
+        <!-- /.row (main row) -->
+        <!-- Modal -->
+        @*<div class="modal fade" id="modalAddBranch" style="display: none;">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">×</span>
+                            </button>
+                            <h4 class="modal-title">Default Modal</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>One fine body…</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                    <!-- /.modal-content -->
+                </div>
+                <!-- /.modal-dialog -->
+            </div>*@
+    }
 </section>
 <!-- /.content -->
