--- a/Views/Admin/PaymentProcessing.cshtml
+++ b/Views/Admin/PaymentProcessing.cshtml
@@ -113,7 +113,7 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                    if (item.Status == "Success" || item.Status == "MR")
+                                    if (item.Status == "Success" || item.Status == "Material Received")
                                     {
                                         <tr class="suc-tbl-row">
                                             <td></td>
@@ -153,7 +153,7 @@
                                             <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                             <td>
-                                                @if (item.Status != "MR")
+                                                @if (item.Status != "Material Received")
                                                 {
                                                     @Html.EncodedActionLink("<i class='fa fa-money'></i>", "POPayment", "Admin",
                                                      new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
@@ -201,11 +201,8 @@
                                             <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                             <td>
-                                                @*@if (Model.UserProfileModels.EmpType != "User")
-                                                    {*@
                                                 @Html.EncodedActionLink("<i class='fa fa-money'></i>", "POPayment", "Admin",
                                                  new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                                @*  }*@
                                             </td>
                                         </tr>
                                     }
@@ -249,11 +246,8 @@
                                             <td>@Html.DisplayFor(modelItem => item.PORRemarks)</td>
                                             <td>@Html.DisplayFor(modelItem => item.Status)</td>
                                             <td>
-                                                @*@if (Model.UserProfileModels.EmpType != "User")
-                                                    {*@
                                                 @Html.EncodedActionLink("<i class='fa fa-money'></i>", "POPayment", "Admin",
                                                  new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                                @*  }*@
                                             </td>
                                         </tr>
                                     }
