--- a/Views/Admin/PurchaseOrders.cshtml
+++ b/Views/Admin/PurchaseOrders.cshtml
@@ -100,6 +100,10 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().ExpDlvDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CurrentStage)</th>
+                                    @*@if (Model.UserProfileModels.EmpType == "SupAdmin")
+                                    {
+                                        <th>Cancel</th>
+                                    }*@
                                 </tr>
                             </thead>
                             <tbody>
@@ -132,6 +136,13 @@
                                         <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                                         <td>@Html.DisplayFor(modelItem => item.ExpDlvDate)</td>
                                         <td>@Html.DisplayFor(modelItem => item.CurrentStage)</td>
+                                        @*@if (Model.UserProfileModels.EmpType == "SupAdmin" && item.Status!="MR")
+                                        {
+                                            <td>
+                                                @Html.EncodedActionLink("<i class='fa fa-times'></i>", "POCancel", "Admin",
+                                                    new { id = item.POPId }, new { @class = "btn btn-edt bg-red btn-sm mb-act-confirm", @data_box = "#mb-act-cnfrm", title = "PO Not Approved" })
+                                            </td>
+                                        }*@
                                     </tr>
                                 }
                             </tbody>
