--- a/Views/Admin/RequestedInvoice.cshtml
+++ b/Views/Admin/RequestedInvoice.cshtml
@@ -87,7 +87,9 @@
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POId)</th>
                                     <th>Requested By</th>
+                                    <th>Requested Date</th>
                                     <th>Invoice</th>
+                                    <th>Invoice Date</th>
                                     <th>Invoice</th>
                                 </tr>
                             </thead>
@@ -98,11 +100,14 @@
                                         <td></td>
                                         <td>@Html.DisplayFor(modelItem => item.RInvoiceNo)</td>
                                         <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                        <td>
+                                            <a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a>
+                                        </td>
                                         <td>
                                             @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Edit", @target = "_blank" })
                                         </td>
                                         <td>@Html.DisplayFor(modelItem => item.RequestedBy)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.PReqDate)</td>
                                         @if (!string.IsNullOrEmpty(item.InvUpload))
                                         {
                                             <td><a href='~/Content/upload/poreqinvoice/@item.InvUpload' target="_blank">@item.InvoiceNo</a></td>
@@ -111,11 +116,36 @@
                                         {
                                             <td></td>
                                         }
+                                        @if (!string.IsNullOrEmpty(item.InvUpload))
+                                        {
+                                            <td>
+                                                @if (item.InvUploadDate == "01/01/1900")
+                                                {
+
+                                                }
+                                                else
+                                                {
+                                                    @Html.DisplayFor(modelItem => item.InvUploadDate)
+                                                }
+                                            </td>
+                                        }
+                                        else
+                                        {
+                                            <td></td>
+                                        }
                                         <td>
-                                            @if (item.Status != "SO")
+                                            @if (Model.UserProfileModels.EmpType == "User")
+                                            {
+                                                if (item.Status != "SO")
+                                                {
+                                                    @Html.EncodedActionLink("Upload", "PORequestInvoiceUpload", "Admin",
+                                                                 new { id = item.RInvoiceNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Upload" })
+                                                }
+                                            }
+                                            else
                                             {
                                                 @Html.EncodedActionLink("Upload", "PORequestInvoiceUpload", "Admin",
-                                                             new { id = item.RInvoiceNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Upload" })
+                                                                     new { id = item.RInvoiceNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Upload" })
                                             }
                                         </td>
                                     </tr>
